# cmd/longue-vue/main.go
@@ -579,6 +579,7 @@ func buildHTTPServer(
 		requireScope(auth.ScopeRead)(cloudAuth(auditWrap(api.HandleListDistinctVMApplications(pg)))),
 	)
 	mux.Handle("GET /v1/os-images", requireScope(auth.ScopeRead)(cloudAuth(auditWrap(api.HandleListOSImages(pg)))))
+	mux.Handle("GET /v1/container-freshness", requireScope(auth.ScopeRead)(cloudAuth(auditWrap(api.HandleListContainerFreshness(pg)))))
 	mux.Handle("GET /v1/virtual-machines/{id}", requireScope(auth.ScopeRead)(cloudAuth(auditWrap(api.HandleGetVirtualMachine(pg)))))
 	mux.Handle("PATCH /v1/virtual-machines/{id}", requireScope(auth.ScopeWrite)(cloudAuth(auditWrap(api.HandlePatchVirtualMachine(pg)))))
 	mux.Handle("DELETE /v1/virtual-machines/{id}", requireScope(auth.ScopeDelete)(cloudAuth(auditWrap(api.HandleDeleteVirtualMachine(pg)))))
